--- a/src/Login.form
+++ b/src/Login.form
@@ -122,7 +122,7 @@
           <Font name="Ubuntu" size="24" style="1"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="LMS"/>
+        <Property name="text" type="java.lang.String" value="Hospital Management System"/>
       </Properties>
     </Component>
   </SubComponents>
